--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "pnpm -r build",
     "dev": "pnpm -r dev",
     "test": "pnpm -r test"
+  },
+  "dependencies": {
+    "ethers": "^6.16.0",
+    "pg": "^8.17.2"
   }
 }
