--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "ethers": "^6.16.0",
     "pg": "^8.11.5"
   },
   "devDependencies": {
