--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "build": "pnpm -r build",
     "dev": "pnpm -r dev",
-    "test": "pnpm -r test"
+    "test": "pnpm -r test",
+    "prepare": "husky install"
   },
   "dependencies": {
     "ethers": "^6.16.0",
     "pg": "^8.17.2"
+  },
+  "devDependencies": {
+    "husky": "^9.1.7"
   }
 }
